<resources>
    <string name="app_name">Spottr</string>
    <!-- Strings used by sign-in -->
    <string name="prompt_email">Email: </string>
    <string name="prompt_name">Name: </string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="profile_pic_content_desc">Profile Picture</string>

    <!-- Profile Verification Strings -->
    <string name="verification_continue">Continue</string>

    <!-- Workout Generation Strings -->
    <string name="workoutCreation_return">Return</string>
    <string name="workoutCreation_start">Start</string>
    <string name="workoutCreation_oneup">One Up</string>

    <!-- Review Strings -->
    <string name="review_toohard">Too Hard</string>
    <string name="review_difficult">Difficult</string>
    <string name="review_justright">Just Right</string>
    <string name="review_fair">Fair</string>
    <string name="review_tooeasy">Too Easy</string>


    <!-- Strings used for Google OAuth -->
    <string name="server_client_id">347900541097-0g1k5jd34m9189jontkd1o9mpv8b8o1o.apps.googleusercontent.com</string>

    <!-- Strings used for Firebase Notifications-->
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="user_credential_store">com.spottr.spottr.usercredstore</string>

    <!-- Strings used by Newsfeed -->
    <string name="newsfeed_image_content_desc">Profile Picture</string>
    <string name="get_workout_button_text_5">5 Minute Workout</string>
    <string name="get_workout_button_text_10">10 Minute Workout</string>
    <string name="get_workout_button_text_20">20 Minute Workout</string>
    <string name="title_activity_review">ReviewActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="spottr_points">Spottr Points:\n</string>

</resources>