<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:backgroundTint="@color/colorPrimaryDark"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/get_workout_button3"
        android:layout_width="136dp"
        android:layout_height="104dp"
        android:layout_marginTop="396dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/get_workout_button_text_20"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/get_workout_button2"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

    <TextView
        android:id="@+id/welcome_back_text"
        android:layout_width="175dp"
        android:layout_height="107dp"
        android:text="User Name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_pic_content_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        tools:srcCompat="@drawable/spottr_logo_cyan"
        tools:visibility="visible" />

    <ListView
        android:id="@+id/newsfeed"
        android:layout_width="385dp"
        android:layout_height="340dp"
        app:layout_constraintBottom_toTopOf="@+id/get_workout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <Button
        android:id="@+id/get_workout_button"
        android:layout_width="135dp"
        android:layout_height="104dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/get_workout_button_text_5"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/get_workout_button2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/get_workout_button2" />

    <Button
        android:id="@+id/get_workout_button2"
        android:layout_width="136dp"
        android:layout_height="104dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/get_workout_button_text_10"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/get_workout_button3" />

</androidx.constraintlayout.widget.ConstraintLayout>